Improved the reporting of background color information.

Previously only the background color in the element's style was exposed. More often than not, this was set to transparent.
With this change, the background colors of all the layout objects from the current object up to the document object are blended until we reach an opacity of less than 50%.
R=dmazzoni@chromium.org, aboxhall@chromium.org
BUG=595880
TESTED=layout test

Review-Url: https://codereview.chromium.org/2006043002
Cr-Commit-Position: refs/heads/master@{#396242}

Former-commit-id: 36a0acdb9f8022148a26ab6198098a44964c19fd